<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:text="@string/favourite_account"
            android:layout_toRightOf="@+id/nameTextView"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name_tv"
            android:id="@+id/nameTextView"
            android:layout_gravity="center_horizontal"
            android:paddingTop="7dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:layout_alignParentRight="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/balance_tv"
            android:id="@+id/balanceTextView"
            android:paddingTop="7dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/def_balance"
            android:id="@+id/balanceText"
            android:layout_toRightOf="@+id/balanceTextView"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:inputType="number" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_tv"
            android:id="@+id/descriptionTextView"
            android:paddingTop="7dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:text="@string/def_account_description"
            android:id="@+id/descriptionText"
            android:layout_toRightOf="@+id/descriptionTextView"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"/>
    </RelativeLayout>
</LinearLayout>